docs: fix license, correct operator semantics, and add architecture/contributing/changelog